compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_parameter_label2.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 383
expression: "fn ignore(thisIsALabel _ignore: Int) { 25 }"
---
----- BEFORE ACTION
fn ignore(thisIsALabel _ignore: Int) { 25 }
            ↑                              


----- AFTER ACTION
fn ignore(this_is_a_label _ignore: Int) { 25 }
