compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_parameter_name2.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 325
expression: "fn pass(label paramName: Bool) { paramName }"
---
----- BEFORE ACTION
fn pass(label paramName: Bool) { paramName }
              ↑                             


----- AFTER ACTION
fn pass(label param_name: Bool) { paramName }
