compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_parameter_name3.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 334
expression: "pub fn main() {\n    let add = fn(numA: Int, num_b: Int) { numA + num_b }\n}"
---
----- BEFORE ACTION
pub fn main() {
    let add = fn(numA: Int, num_b: Int) { numA + num_b }
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑                           
}


----- AFTER ACTION
pub fn main() {
    let add = fn(num_a: Int, num_b: Int) { numA + num_b }
}
