compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_pattern_assignment.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 487
expression: "pub fn main() {\n    let assert 42 as theAnswer = 42\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert 42 as theAnswer = 42
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
}


----- AFTER ACTION
pub fn main() {
    let assert 42 as the_answer = 42
}
