compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_tuple_pattern_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 558
expression: "pub fn main() {\n    let #(a, _secondValue) = #(1, 2)\n}"
---
----- BEFORE ACTION
pub fn main() {
    let #(a, _secondValue) = #(1, 2)
             ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑      
}


----- AFTER ACTION
pub fn main() {
    let #(a, _second_value) = #(1, 2)
}
