compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_type_alias.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 421
expression: type Fancy_Bool = Bool
---
----- BEFORE ACTION
type Fancy_Bool = Bool
      ▔▔▔▔▔▔▔▔▔▔↑     


----- AFTER ACTION
type FancyBool = Bool
