compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_type_alias_parameter_name.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: type Phantom<phantomType>= Int
---
----- BEFORE ACTION
type Phantom<phantomType>= Int
             ▔▔▔▔▔▔▔▔▔▔▔↑     


----- AFTER ACTION
type Phantom<phantom_type>= Int
