compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_type_parameter_name.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "record Wrapper<innerType> {}"
---
----- BEFORE ACTION
record Wrapper<innerType> {}
             ▔▔▔▔▔▔▔▔▔↑   


----- AFTER ACTION
record Wrapper<inner_type> {}
