compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_use.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 463
expression: "fn use_test(f) { f(Nil) }\npub fn main() {use useVar <- use_test()}"
---
----- BEFORE ACTION
fn use_test(f) { f(Nil) }
pub fn main() {use useVar <- use_test()}
               ▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑          


----- AFTER ACTION
fn use_test(f) { f(Nil) }
pub fn main() {use use_var <- use_test()}
