compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_use_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 475
expression: "fn use_test(f) { f(Nil) }\npub fn main() {use _discardVar <- use_test()}"
---
----- BEFORE ACTION
fn use_test(f) { f(Nil) }
pub fn main() {use _discardVar <- use_test()}
                             ↑               


----- AFTER ACTION
fn use_test(f) { f(Nil) }
pub fn main() {use _discard_var <- use_test()}
