compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_variable.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 441
expression: "pub fn main() {\n    let theAnswer = 42\n}"
---
----- BEFORE ACTION
pub fn main() {
    let theAnswer = 42
        ▔▔▔↑          
}


----- AFTER ACTION
pub fn main() {
    let the_answer = 42
}
